docker/bridge/base/admin-deployment.yaml
#! admin-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: admin
    namespace: champey
    labels:
        com.docker.compose.project: champey
        com.docker.compose.service: admin
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: champey
            com.docker.compose.service: admin
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: champey
                com.docker.compose.service: admin
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: admin
                  image: champey-admin
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - wget -qO- http://127.0.0.1:3001/healthz >/dev/null 2>&1 || exit 1
                    periodSeconds: 30
                    initialDelaySeconds: 30
                    timeoutSeconds: 5
                    failureThreshold: 3
                  ports:
                    - name: admin-3001
                      containerPort: 3001
