docker/bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: champey
    labels:
        com.docker.compose.project: champey
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: champey
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: champey
                com.docker.compose.service: backend
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: backend
                  image: champey-backend
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - wget -qO- http://127.0.0.1:4000/api/health/live || exit 1
                    periodSeconds: 15
                    initialDelaySeconds: 30
                    timeoutSeconds: 5
                    failureThreshold: 3
                  ports:
                    - name: backend-4000
                      containerPort: 4000
