docker/bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: champey
    labels:
        com.docker.compose.project: champey
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: champey
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: champey
                com.docker.compose.service: frontend
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: frontend
                  image: champey-frontend
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - wget -qO- http://127.0.0.1:3000/ >/dev/null 2>&1 || exit 1
                    periodSeconds: 30
                    initialDelaySeconds: 30
                    timeoutSeconds: 5
                    failureThreshold: 3
                  ports:
                    - name: frontend-3000
                      containerPort: 3000
