docker/bridge/base/meilisearch-deployment.yaml
#! meilisearch-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: meilisearch
    namespace: champey
    labels:
        com.docker.compose.project: champey
        com.docker.compose.service: meilisearch
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: champey
            com.docker.compose.service: meilisearch
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: champey
                com.docker.compose.service: meilisearch
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: meilisearch
                  image: getmeili/meilisearch:v1.6
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://localhost:7700/health']
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: meilisearc-7700
                      containerPort: 7700
                  volumeMounts:
                    - name: meili-data
                      mountPath: /meili_data
            volumes:
                - name: meili-data
                  persistentVolumeClaim:
                    claimName: meilisearch-meili-data
