docker/bridge/base/minio-deployment.yaml
#! minio-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: minio
    namespace: champey
    labels:
        com.docker.compose.project: champey
        com.docker.compose.service: minio
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: champey
            com.docker.compose.service: minio
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: champey
                com.docker.compose.service: minio
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: minio
                  image: minio/minio
                  imagePullPolicy: IfNotPresent
                  args:
                    - server
                    - /data
                    - --console-address
                    - :9001
                  livenessProbe:
                    exec:
                        command: [mc ready local]
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: minio-9000
                      containerPort: 9000
                  volumeMounts:
                    - name: data
                      mountPath: /data
            volumes:
                - name: data
                  persistentVolumeClaim:
                    claimName: minio-minio-data
