docker/bridge/base/redis-deployment.yaml
#! redis-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: champey
    labels:
        com.docker.compose.project: champey
        com.docker.compose.service: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: champey
            com.docker.compose.service: redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: champey
                com.docker.compose.service: redis
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: redis
                  image: redis:7
                  imagePullPolicy: IfNotPresent
                  args:
                    - redis-server
                    - --requirepass
                    - redis
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - redis-cli -a redis ping | grep -q PONG
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: redis-6379
                      containerPort: 6379
                  volumeMounts:
                    - name: data
                      mountPath: /data
            volumes:
                - name: data
                  persistentVolumeClaim:
                    claimName: redis-redis-data
