docker/bridge/base/admin-expose.yaml
#! admin-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: admin
    namespace: champey
    labels:
        com.docker.compose.project: champey
        com.docker.compose.service: admin
spec:
    selector:
        com.docker.compose.project: champey
        com.docker.compose.service: admin
    ports:
        - name: admin-3001
          port: 3001
          targetPort: admin-3001
