docker/bridge/base/backend-expose.yaml
#! backend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: champey
    labels:
        com.docker.compose.project: champey
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: champey
        com.docker.compose.service: backend
    ports:
        - name: backend-4000
          port: 4000
          targetPort: backend-4000
