docker/bridge/base/frontend-service.yaml
# check if there is at least one published port

#! frontend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend-published
    namespace: champey
    labels:
        com.docker.compose.project: champey
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: champey
        com.docker.compose.service: frontend
    ports:
        - name: frontend-3000
          port: 3000
          protocol: TCP
          targetPort: frontend-3000

# check if there is at least one published port
