docker/bridge/base/minio-expose.yaml
#! minio-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: minio
    namespace: champey
    labels:
        com.docker.compose.project: champey
        com.docker.compose.service: minio
spec:
    selector:
        com.docker.compose.project: champey
        com.docker.compose.service: minio
    ports:
        - name: minio-9000
          port: 9000
          targetPort: minio-9000
