docker/bridge/base/minio-service.yaml
#! minio-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: minio-published
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: minio
spec:
    selector:
        com.docker.compose.project: docker
        com.docker.compose.service: minio
    ports:
        - name: minio-9000
          port: 9000
          protocol: TCP
          targetPort: minio-9000
        - name: minio-9001
          port: 9001
          protocol: TCP
          targetPort: minio-9001

# check if there is at least one published port
